# Nikola-ProtoAGI

./: .env.example  .gitignore  LICENSE  NOTICE  README.md  THIRD_PARTY_MODELS.md  pyproject.toml  run-nikola.bat  run-nikola.sh  run-tests.bat  run-tests.sh  stop-nikola.bat
.claude/: settings.local.json
config/: protoagi.example.json
docs/: ARCHITECTURE.md  AUDIT.md  ROADMAP.md  RUNTIME.md  TELEGRAM.md
examples/: first_tasks.md
runs/: bench-tools-baseline.json  memory-eval-baseline.json
scripts/: bench-llama.ps1  bench-tools.ps1  check_baseline.py  ensure-ffmpeg.ps1  eval-memory.ps1  redescribe_failed_stickers.py  smoke-test.ps1  start-admin-server.ps1  start-embed-server.ps1  start-nikola-stack.ps1  start-server.ps1  start-telegram.ps1  start-tts-server.ps1  start-vision-server.ps1  start-voice-server.ps1  status.ps1  stop-nikola.ps1  stop-server.ps1  stop-stack.ps1  tts-server-uk.py  voice-server.py
tests/: test_admin.py  test_admin_new_endpoints.py  test_agent.py  test_animation_attachments.py  test_async_runner.py  test_backup.py  test_bench.py  test_check_baseline.py  test_cli.py  test_conflict_resolution.py  test_conflict_surfacing.py  test_conflicts.py  test_decision_goals.py  test_decision_reminders.py  test_embedding.py  test_env.py  test_goals.py  test_group_gate.py  test_harmony.py  test_memory.py  test_memory_eval.py  test_memory_federation.py  test_memory_health.py  test_memory_service.py  test_openai_compat.py  test_persona.py  test_persona_loader.py  test_provenance.py  test_pruning.py  test_reasoning_log.py  test_reflection.py  test_runner.py  (+15 more)
(+87 files in other folders)
