[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "protoagi"
version = "0.1.0"
description = "Local agentic AGI experiment around gpt-oss-20b GGUF and llama.cpp."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
protoagi = "protoagi.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
